--- a/src/styles/projectImages.css
+++ b/src/styles/projectImages.css
@@ -1,10 +1,26 @@
+#pictures-to-move {
+    position: relative;
+    z-index: -1;
+}
+
 .pictures-to-move__collection {
+    cursor: move;
     opacity: 0.3;
     transition: all 1s;
     -webkit-transition: all 1s;
+    -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+    filter: grayscale(100%);
 }
 
 .opacity {
+    opacity: 1;
+    transition: all 1s;
+    -webkit-transition: all 1s;
+    filter: none;
+}
+
+
+.picture-container:hover > .picture-container__informations{
     opacity: 1;
     transition: all 1s;
     -webkit-transition: all 1s;
@@ -12,36 +28,75 @@
 
 #picture-container__1 {
     position: absolute;
-    top: 30px;
-    left: 300px;
-}
-
-#picture-container__1 img {
-    left: 1200px;
-    width: 100px;
-    height: 100px;
+    left: 47.5vw;
+    top: 1.875vw;
+    width: 60%;
 }
 
 #picture-container__2 {
-    position: absolute;
-    top: 170px;
-    left: 70px;
-}
-
-#picture-container__2 img {
-    right: 200px;
-    width: 100px;
-    height: 100px;
+    position: absolute;    
+    left: 18.681vw;
+    top: 26.323vw;
+    width: 25%;
 }
 
 #picture-container__3 {
     position: absolute;
-    top: 250px;
-    right: 200px;
+    width: 40%;
+    left: 40vw;
+    top: 37vw;
 }
 
+
+#picture-container__1 img,
+#picture-container__2 img,
 #picture-container__3 img {
-    left: 350px;  
-    width: 100px;
-    height: 100px;  
+   position: relative;
+   height: 100%;
+   width: 100%;
+}
+
+.picture-container__informations{
+    font-size: var(--font-size-details-big-screen);
+    opacity: 0;
+}
+
+.picture-container__informations p,
+.picture-container__informations a{
+    opacity: var(--opacity);
+}
+
+.picture-container__informations p{
+    margin: 0;
+}
+
+
+.picture-container__informations h3{
+    margin: 0 0 5px 0;
+}
+
+.picture-container__informations a{
+    text-decoration: none;
+    transition: opacity .3s ease;
+    color: black;
+    opacity: var(--opacity);
+    position: relative;
+    display: inline-block;
+}
+
+.picture-container__informations a:hover{
+    text-decoration: none;
+    transition: opacity .3s ease;
+    color: black;
+    opacity: 1;
+}
+
+.picture-container__informations a::after {
+    content: "";
+    width: 100%;
+    height: 1px;
+    background: #ccc;
+    display: block;
+    position: absolute;
+    bottom: 0;
 }
