--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -1,6 +1,5 @@
 #about-me {
     width: 40%;
-    float: left;
     margin-left: 10%;
 }
 
@@ -10,10 +9,12 @@
     line-height: 1.2em;
     margin-top: 1.5em;
     margin-bottom: 0;
+    z-index: 50;
 }
 
 #about-me p {
     opacity: var(--opacity);
     font-size: var(--font-size-big-screen);
     margin: 0;
+    z-index: 50;
 }
