--- a/src/styles/projectImages.css
+++ b/src/styles/projectImages.css
@@ -1,7 +1,3 @@
-#pictures-to-move {
-    z-index: -1;
-}
-
 .pictures-to-move__collection {
     cursor: move;
     opacity: 0.3;
@@ -11,24 +7,6 @@
     filter: grayscale(100%);
 }
 
-.opacity {
-    opacity: 1;
-    transition: all 1s;
-    -webkit-transition: all 1s;
-    filter: none;
-    z-index: 1;
-}
-
-.picture-container {
-    z-index: -1;
-}
-
-
-.picture-container:hover > .picture-container__informations{
-    opacity: 1;
-    transition: all 1s;
-    -webkit-transition: all 1s;
-}
 
 #picture-container__1 {
     position: absolute;
@@ -96,4 +74,11 @@
     display: block;
     position: absolute;
     bottom: 0;
+}
+
+.opacity {
+    opacity: 0.9 !important;
+    transition: all 1s;
+    -webkit-transition: all 1s;
+    filter: grayscale(50%) !important;
 }
