--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -1,20 +1,35 @@
 #about-me {
-    width: 40%;
-    margin-left: 10%;
+    margin-bottom: 5em;
 }
 
 #about-me h1 {
-    font-size: var(--title-font-size-big-screen);
+    font-size: var(--title-font-size );
     letter-spacing: .015em;
     line-height: 1.2em;
-    margin-top: 1.5em;
     margin-bottom: 0;
     z-index: 50;
 }
 
 #about-me p {
     opacity: var(--opacity);
-    font-size: var(--font-size-big-screen);
+    font-size: var(--font-size );
     margin: 0;
     z-index: 50;
+}
+
+@media screen and (min-width: 700px) {   
+    #about-me {
+        width: 60%;
+        margin-left: 5%;
+    }
+    #about-me h1 {
+        margin-top: 1.5em;
+    }
+}
+
+@media screen and (min-width: 990px) {   
+    #about-me {
+        width: 40%;
+        margin-left: 10%;
+    }
 }
