--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,5 +1,6 @@
 body {    
     overflow-x: hidden;
+    margin: 0;
     font-family: 'Lato', Arial, sans-serif;
 }
 
@@ -8,17 +9,19 @@ body {
     top: 0;
     right: 0;
     left: 0;
-    padding: 2em 4em;
+    padding-left: var(--gap);
+    padding-right: var(--gap);
     z-index: 100;
     pointer-events: none;
+    background-color: white;
 }
 
 #nav {
-    padding: 1em;
-    float: right;
+    padding-top: 2.5em;
+    padding-bottom: 2.5em;
+    float: left;
     display: block;
     pointer-events: auto;
-    opacity: 1;
 }
 
 #nav a {
@@ -26,7 +29,7 @@ body {
     transition: opacity .3s ease;
     color: black;
     opacity: var(--opacity);
-    font-size: var(--font-size-big-screen);
+    font-size: var(--font-size);
     position: relative;
     display: inline-block;
 }
@@ -42,7 +45,7 @@ body {
     opacity: 1;
 }
 
-#nav a:hover::after {
+#nav a::after {
     content: "";
     width: 100%;
     height: 1px;
@@ -58,6 +61,17 @@ body {
 }
 
 #app {    
-    padding: 7em 3em;
-    position: relative;
+    padding: 7em var(--gap);
+    /*position: relative;*/
+    overflow: hidden;
+}
+
+@media screen and (min-width: 700px) {   
+    #nav {
+        float: right;
+    }
+    #header {
+        padding: 2em 4em; 
+        background: none;       
+    }
 }
