project page + responsive

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -13,7 +13,7 @@ body {
     padding-right: var(--gap);
     z-index: 100;
     pointer-events: none;
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.5);
 }
 
 #nav {
@@ -25,35 +25,11 @@ body {
 }
 
 #nav a {
-    text-decoration: none;
-    transition: opacity .3s ease;
-    color: black;
-    opacity: var(--opacity);
     font-size: var(--font-size);
-    position: relative;
-    display: inline-block;
 }
 
 #nav .active {
     opacity: 1;
-}
-
-#nav a:hover {
-    text-decoration: none;
-    transition: opacity .3s ease;
-    color: black;
-    opacity: 1;
-}
-
-#nav a::after {
-    content: "";
-    width: 100%;
-    height: 1px;
-    background: #ccc;
-    display: block;
-    position: absolute;
-    bottom: 0;
-    transition: background .3s ease;
 }
 
 #nav a:not(:last-child) {
@@ -72,6 +48,6 @@ body {
     }
     #header {
         padding: 2em 4em; 
-        background: none;       
+        background: none;   
     }
 }
