--- a/src/styles/_base.css
+++ b/src/styles/_base.css
@@ -25,3 +25,28 @@
         --gap: 3em;
     }
 }
+
+.nav__link {    
+    text-decoration: none;
+    transition: opacity .3s ease;
+    color: black;
+    opacity: var(--opacity);
+    position: relative;
+    display: inline-block;
+}
+
+.nav__link:hover{
+    text-decoration: none;
+    transition: opacity .3s ease;
+    opacity: 1;
+}
+
+.nav__link::after {
+    content: "";
+    width: 100%;
+    height: 1px;
+    background: #ccc;
+    display: block;
+    position: absolute;
+    bottom: 0;
+}
