--- a/src/styles/project.css
+++ b/src/styles/project.css
@@ -22,7 +22,32 @@
 
 #project a {    
     font-size: 1.5em !important;
+    text-align: right;
+    margin-right: 0.5em;
 }
+
+.animated-arrow {
+    position: relative;
+    color: var(--secondary-color);
+}
+
+.project__links-subcontainer:hover .animated-arrow{    
+    animation: 3s ease-in 1s 2 reverse both paused slidein;
+    animation: bounce 2s infinite;
+}
+
+@keyframes bounce {
+    0%, 20%, 50%, 80%, 100% {
+      transform: translateX(0);
+    }
+    40% {
+      transform: translateX(10px);
+    }
+    60% {
+      transform: translateX(5px);
+    }
+  }
+
 
 .project__left {
     width: 100%;
@@ -31,14 +56,17 @@
 .project__links {
     width: 100%;
     margin-top: 4em;
-}
-
-.project__links p {
-    text-align: right;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .project__subcontainer {
     flex-direction: column;
+}
+
+.animated-arrow{
+    display: inline-block;
 }
 
 
@@ -63,7 +91,7 @@
         width: 30%;
     }
 
-    .project__links p {
+    .project__links a {
         text-align: center;
     }
 
