--- a/src/styles/project.css
+++ b/src/styles/project.css
@@ -6,7 +6,15 @@
     font-size: var(--font-size );
     opacity: var(--opacity );
     margin-bottom: 1em;    
-    margin-left: 10%;
+}
+
+#project h2::after {
+    content: "";
+    width: 100%;
+    height: 2px;
+    background: var(--secondary-color);
+    display: block;
+    bottom: 0;
 }
 
 #project img {    
@@ -24,6 +32,10 @@
     font-size: 1.5em !important;
     text-align: right;
     margin-right: 0.5em;
+}
+
+#project a:after {    
+    display: none;
 }
 
 .animated-arrow {
@@ -69,6 +81,10 @@
     display: inline-block;
 }
 
+.project__links {
+    width: fit-content;
+}
+
 
 @media screen and (min-width: 900px) { 
     .project__left {
@@ -87,7 +103,6 @@
 
     .project__links {
         margin-top: 0;
-        align-self: center;
         width: 30%;
     }
 
@@ -96,6 +111,6 @@
     }
 
     .project__left {
-        width: 70%;
+        width: 60%;
     }
 }
