scroll animation about page

--- a/src/styles/_base.css
+++ b/src/styles/_base.css
@@ -3,6 +3,7 @@
     --font-size: 1.3em;
     --font-size-details: 0.8em;
     --title-font-size: 2em;
+    --large-gap: 7em;
     --gap: 5vw;
     --secondary-color: rgb(147,112,219)
 }
