--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -1,3 +1,7 @@
+#about {
+    margin: 0 var(--gap);
+}
+
 #scroll-bar {
     width: 2px;
     background-image: linear-gradient(to top, rgba(0, 0, 0) 0%, rgba(0, 0, 0, 0) 85%, rgba(0, 0, 0, 0) 100%);
@@ -47,7 +51,4 @@
 
 .about-section{
     height: 50vh;
-    position: absolute;
-    top: 50vh;
-    display: none;
 }
