--- a/src/styles/project.css
+++ b/src/styles/project.css
@@ -1,40 +1,66 @@
-#project h1 {    
-    font-size: var(--title-font-size );
+.project__header {
+    margin-top: 5em;
+    text-align: center;
+    background-color: rgb(238,238,238);
+    padding: var(--gap);
 }
 
-#project h2 {    
+.project h1 {    
+    font-size: var(--title-font-size );
+    text-transform: uppercase;
+}
+
+.project h3 {    
     font-size: var(--font-size );
     opacity: var(--opacity );
-    margin-bottom: 1em;    
 }
 
-#project h2::after {
-    content: "";
-    width: 100%;
-    height: 2px;
-    background: var(--secondary-color);
+.project img {    
+    width: 950px;
+    height: auto;
+    max-width: 100%;
+    margin: var(--gap) auto;
+    align-items: center;
+    border: 1px solid rgba(0,0,0,.15);
+    text-align: center;
     display: block;
-    bottom: 0;
+    filter: grayscale(80%);
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+
 }
 
-#project img {    
-    font-size: var(--font-size );
-    width: 100%;
-    margin: 2em 0;
-}
 
 .project__description{    
-    font-size: var(--font-size );
+    font-size: 1em;
     margin: 0
 }
 
-#project a {    
+.project__technologies {
+    display: flex;
+    justify-content: center;
+    max-width: 640px;
+    margin: 1em auto;
+}
+
+.project__technologies li::marker {
+    display: none;
+}
+
+.project__technologies li {    
+    margin: 1em;
+    font-size: var(--font-size-details);
+    letter-spacing: .05em;
+    text-transform: uppercase;
+    margin-bottom: 0;
+}
+
+.project a {    
     font-size: 1.5em !important;
     text-align: right;
     margin-right: 0.5em;
 }
 
-#project a:after {    
+.project a:after {    
     display: none;
 }
 
@@ -61,47 +87,26 @@
   }
 
 
-.project__left {
-    width: 100%;
+.project__top {    
+    font-size: 1em;
+    line-height: 1.6em;
+    margin: auto;
+    width: 80%;
+    max-width: 640px;
 }
 
 .project__links {    
-    width: fit-content;
-    margin-top: 4em;
-    display: flex;
-    flex-direction: column;
-    align-items: left;
+    text-align: center;
+    margin: 1em auto;
+    letter-spacing: .05em;
+    text-transform: uppercase;
 }
 
-.project__subcontainer {
-    flex-direction: column;
+.project__links a{    
+    font-size: var(--font-size-details) !important;
 }
 
 .animated-arrow{
     display: inline-block;
 }
 
-
-@media screen and (min-width: 900px) { 
-    .project__left {
-        width: 80%;
-    } 
-    .project__links {
-        margin-top: 2em;
-    }
-}
-
-@media screen and (min-width: 900px) {  
-    .project__subcontainer {
-        display: flex;
-        flex-direction: row;
-    }
-
-    .project__links {
-        margin: 0 auto;
-    }
-
-    .project__left {
-        width: 60%;
-    }
-}
