--- a/src/styles/project.css
+++ b/src/styles/project.css
@@ -1,8 +1,7 @@
 .project__header {
-    margin-top: 5em;
     text-align: center;
     background-color: rgb(238,238,238);
-    padding: var(--gap);
+    padding: var(--gap) 1em;
 }
 
 .project h1 {    
@@ -16,7 +15,7 @@
 }
 
 .project img {    
-    width: 950px;
+    max-width: 950px;
     height: auto;
     max-width: 100%;
     margin: var(--gap) auto;
@@ -65,6 +64,7 @@
 }
 
 .animated-arrow {
+    display: none;
     position: relative;
     color: var(--secondary-color);
 }
@@ -103,10 +103,50 @@
 }
 
 .project__links a{    
-    font-size: var(--font-size-details) !important;
+    background-color: white;
+    color: black;
+    font-size: 1.2em !important;
+    margin: 1em 0;
+    border: 1px solid #000;
+    padding: 0.3em 1em;
 }
 
-.animated-arrow{
-    display: inline-block;
+.project__links a:hover{    
+    font-size: 1.2em !important;
+    margin: 1em 0;
+    border: 1px solid #000;
+    padding: 0.3em 1em;
+    background-color: black;
+    border-color: white;
+    color: white;
 }
 
+
+@media screen and (min-width: 700px) {  
+    .project__header {
+        margin-top: 2em;
+    }
+}
+
+@media screen and (min-width: 990px) {  
+    .project__header {
+        margin-top: 5em;
+    }
+
+    .project__links a{    
+        border: none;
+        margin: 0.5em 0;
+        font-size: 1em !important;
+    }
+    .project__links a:hover{    
+        font-size: 1.2em !important;
+        margin: 0.5em 0;
+        border: white;
+        background-color: white;
+        color: black;
+    }
+
+    .animated-arrow{
+        display: inline-block;
+    }
+}
