--- a/src/styles/_base.css
+++ b/src/styles/_base.css
@@ -5,7 +5,8 @@
     --title-font-size: 2em;
     --large-gap: 7em;
     --gap: 5vw;
-    --secondary-color: rgb(147,112,219)
+    --secondary-color: rgb(147,112,219);
+    --margin-top: 0em;
 }
 
 @media screen and (min-width: 700px) {   
@@ -14,6 +15,7 @@
         --font-size-details : 0.8em;
         --title-font-size : 2em;
         --gap: 2em;
+        --margin-top: 2em;
     }
 }
 
@@ -23,6 +25,7 @@
         --font-size-details : 0.8em;
         --title-font-size : 2.5em;
         --gap: 3em;
+        --margin-top: 5em;
     }
 }
 
@@ -63,4 +66,5 @@ ul {
 
 p, h1, h2, h3, div {
     margin: 0;
+    font-weight: normal;
 }
