--- a/src/styles/project.css
+++ b/src/styles/project.css
@@ -1,5 +1,6 @@
 #project {
     margin-top: var(--margin-top);
+    padding-bottom: 3em;
 }
 
 .project__header {
@@ -63,34 +64,6 @@
     margin-right: 0.5em;
 }
 
-.project a:after {    
-    display: none;
-}
-
-.animated-arrow {
-    display: none;
-    position: relative;
-    color: var(--secondary-color);
-}
-
-.project__links-subcontainer:hover .animated-arrow{    
-    animation: 3s ease-in 1s 2 reverse both paused slidein;
-    animation: bounce 2s infinite;
-}
-
-@keyframes bounce {
-    0%, 20%, 50%, 80%, 100% {
-      transform: translateX(0);
-    }
-    40% {
-      transform: translateX(10px);
-    }
-    60% {
-      transform: translateX(5px);
-    }
-  }
-
-
 .project__top {    
     font-size: 1em;
     line-height: 1.6em;
@@ -125,21 +98,12 @@
     color: white;
 }
 
-@media screen and (min-width: 990px) {
-    .project__links a{    
-        border: none;
-        margin: 0.5em 0;
-        font-size: 1em !important;
-    }
-    .project__links a:hover{    
-        font-size: 1.2em !important;
-        margin: 0.5em 0;
-        border: white;
-        background-color: white;
-        color: black;
-    }
+.project__links a::after{    
+    display: none !important;
+}
 
-    .animated-arrow{
-        display: inline-block;
+@media screen and (min-width: 700px) {
+    .project {
+        padding-top: 3em;
     }
 }
