--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -1,10 +1,9 @@
 #contact {
-    margin: var(--margin-top) 0 0 0;
+    padding: var(--margin-top) 0 0 0;
     overflow: hidden;
-    background-color: rgb(238,238,238);
-    min-height: 100vh;
-    padding-bottom: var(--gap);
-    padding-bottom: 3em;
+    background-color: var(--background-color);
+    padding-bottom: calc(var(--gap) *3);
+    min-height: calc(100vh - 8em - 5em - 4em);
 }
 
 #contact__header {
@@ -32,7 +31,8 @@
 
 .social-medias{
     text-align: right;
-    padding: 1em;
+    padding-top: 1em;
+    margin-right: var(--gap);
 }
 
 .social-medias a:not(:last-child) {
@@ -114,23 +114,8 @@
     height: 280px;
 }
 
-
-@media screen and (min-width: 600px) { 
-    #whale-contact {
-        height: 400px;
-        width: 400px;
-    }  
-
-    #whale-contact svg {
-        width: 30em !important;
-    }
-
-    #whale-contact__picture {
-        height: 380px;
-    }
-}
-
 @media screen and (min-width: 900px) {    
+
     #contact__header {
         width: 40vw;
         height: 40vw;
@@ -158,8 +143,8 @@
     }
 }
 
-@media screen and (min-width: 990px) {   
+@media screen and (min-width: 700px) {   
     #contact {
-        margin: var(--margin-top) 10em var(--gap);
+        min-height: calc(100vh - 12em - 5em - 6em);
     }
 }
