--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -45,7 +45,17 @@ body {
 }
 
 #footer {
-    height: 5em;
+    height: 5em;    
+    width: 80%;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+    font-size: var(--font-size-details);
+}
+
+#footer__right, 
+#footer__left {
+    margin-top: 1em;
 }
 
 #footer::before {
