--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -1,7 +1,7 @@
 #projects-container {    
     margin: 0 var(--gap);
     padding-bottom: calc(var(--gap) *3);
-    min-height: calc((55vw + 40vh));
+    min-height: fit-content;
 }
 
 #about-me {
@@ -37,5 +37,8 @@
     #about-me {
         width: 40%;
         margin-left: 10%;
+    }
+    #projects-container {    
+        min-height: calc((55vw + 40vh));
     }
 }
