--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,3 +1,7 @@
+html {
+    scroll-behavior: smooth;
+}
+
 body {    
     overflow-x: hidden;
     margin: 0;
@@ -30,18 +34,26 @@ body {
     font-size: var(--font-size);
 }
 
-#nav .active {
+#nav a::after {
+    display: none !important;
+}
+
+#nav .active {    
+    color: white;
+    padding: 1em;
+    background-color: black;
     opacity: 1;
 }
+
 
 #nav a:not(:last-child) {
     margin-right: 20px;
 }
 
 #app {    
-    padding: 6em 0 0 0;
+    padding: 8em 0 0 0;
     /*position: relative;*/
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 
