--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -1,43 +1,86 @@
 #projects-container {    
-    margin: 0 var(--gap);
+    /* margin: 0 var(--gap); */
     padding-bottom: calc(var(--gap) *3);
     min-height: fit-content;
 }
 
 #about-me {
-    margin-bottom: 5em;
+    margin-top: 10em;
+    display: flex;
+    position: relative;
 }
 
 #about-me h1 {
     font-size: var(--title-font-size );
     letter-spacing: .015em;
     line-height: 1.2em;
-    margin-bottom: 0;
+    margin-bottom: 0.5em;
     z-index: 50;
 }
 
 #about-me p {
     opacity: var(--opacity);
-    font-size: var(--font-size );
+    font-size: var(--font-size-details );
     margin: 0;
     z-index: 50;
 }
 
-@media screen and (min-width: 700px) {   
-    #about-me {
-        width: 60%;
-        margin-left: 5%;
-    }
-    #about-me h1 {
-        margin-top: 1.5em;
-    }
+#about-introduction {
+    border-bottom: 1px solid gray;
+    padding-left: var(--gap);
+    padding-bottom: 1em;
+    align-self: flex-end;
+    line-height: 2;
+    letter-spacing: 0.1em;
+    padding: 2em;
+    z-index: 30;
+    background-color: white;
+}
+
+#about-img {    
+    width: 500px;
+    opacity: 0.6;
+    border-right: 1px solid gray;
+    border-bottom: 1px solid gray;
+}
+
+#about-guide {    
+    justify-self: flex-end;
+    align-self: flex-end;
+    margin-left: var(--gap);
+    border-left: 1px solid gray;
+    padding-left: var(--gap);
+}
+
+#pictures-to-move__title {
+    text-transform: uppercase;
+    z-index: 50;
+    font-size: var(--font-size);
+    line-height: 2;
+    letter-spacing: 0.1em;
+
+}
+
+#arrow-bottom {    
+  display: inline-block;
+  width: 15px;
+  height: 15px;
+  border-top: 2px solid #000;
+  border-right: 2px solid #000;
+  transform: rotate(135deg);
+}
+
+#square-div {    
+    position: absolute;
+    border: 3px solid black;
+    height: 30em;
+    width: 20em;
+    left: 400px;
+    top: -7em;
 }
 
 @media screen and (min-width: 990px) {   
-    #about-me {
-        width: 40%;
-        margin-left: 10%;
-    }
+    
     #projects-container {    
         min-height: calc((55vw + 40vh));
     }
