--- a/src/styles/projectImages.css
+++ b/src/styles/projectImages.css
@@ -17,14 +17,14 @@
 
 
 #picture-container__1 {
-    left: 47.5vw;
-    top: 55vh;
-    width: 60%;
+    top: 50em;
+    left: 40vw;
+    width: 50vw;
 }
 
 #picture-container__2 {  
     left: 17vw;
-    top: 50vh;
+    top: 37em;
     width: 30%;
 }
 
