animations projects page

--- a/src/styles/projectImages.css
+++ b/src/styles/projectImages.css
@@ -29,9 +29,9 @@
 }
 
 #picture-container__3 {
-    top: 100vh;
-    left: 70vw;
-    width: 40%;
+    top: 73em;
+    left: 3em;
+    width: 60vw;
 }
 
 
