responsive front page

--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -27,15 +27,14 @@
 
 #about-introduction {
     border-bottom: 1px solid gray;
-    border-left: 1px solid gray;
     padding-left: var(--gap);
-    padding-bottom: 1em;
     align-self: flex-end;
     line-height: 2;
     letter-spacing: 0.1em;
     padding: 2em;
     z-index: 30;
     background-color: white;
+    margin-bottom: var(--gap);
 }
 
 #about-img {    
@@ -44,12 +43,13 @@
     border-bottom: 1px solid gray;
     height: 100%;
     align-self: flex-end;
-    display: none;
+    left: -2em !important;
 }
 
 #about-img-container {
     margin-bottom: 3em;
-    width: 500px
+    width: 500px;
+    display: none;
 }
 
 #about-circle {
@@ -57,13 +57,13 @@
     width: 20px;
     border: 3px solid gray;
     border-radius: 50%;
+    left: 3em !important;
 }
 
 #about-guide {    
     justify-self: flex-end;
     align-self: flex-end;
     margin-left: var(--gap);
-    border-left: 1px solid gray;
     padding-left: var(--gap);
     display: none;
 }
@@ -84,6 +84,7 @@
   border-top: 2px solid #000;
   border-right: 2px solid #000;
   transform: rotate(135deg);
+  cursor: pointer;
 }
 
 /* inspiration : https://codepen.io/paolocavanna/pen/qNKAyX */
@@ -153,15 +154,25 @@
 }
 
 
-@media screen and (min-width: 1450px) {   
+@media screen and (min-width: 990px) and (max-width: 1450px){   
     #about-guide {
         display: block;
+        position: absolute;
+        top: 0;
     }
+}
+
+@media screen and (min-width: 1450px){   
+    #about-guide {
+        position: relative;
+        display: block;
+        border-left: 1px solid gray;
+    }    
 }
 
 
 @media screen and (min-width: 750px) {   
-    #about-img {   
+    #about-img-container {   
         display: block;
     }   
     #square-div {
@@ -170,5 +181,10 @@
     #about-me {      
         margin: 15em 0 var(--gap);
     }
+    #about-introduction {        
+        border-left: 1px solid gray;
+        margin-bottom: 0;
+    }
+
 }
 
