--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -20,7 +20,7 @@
 
 #about-me p {
     opacity: var(--opacity);
-    font-size: var(--font-size-details );
+    font-size: 1em;
     margin: 0;
     z-index: 50;
 }
@@ -90,7 +90,7 @@
 
 /* inspiration : https://codepen.io/paolocavanna/pen/qNKAyX */
 
-#square-div {    
+.square-div {    
     position: absolute;
     height: 30em;
     width: 20em;
@@ -157,7 +157,7 @@
 
 @media screen and (min-width: 750px) and (max-width: 1450px){   
     #about-guide {
-        top: 0;      
+        bottom: 1em;      
         margin-left: var(--gap);
     }
 }
@@ -174,7 +174,7 @@
     #about-img-container {   
         display: block;
     }   
-    #square-div {
+    .square-div {
         display: block;
     } 
     #about-me {      
